third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/table/no-close-2.stderr
TOML parse error at line 1, column 25
  |
1 | [closing-bracket.missingö
  |                         ^^
invalid table header
expected `.`, `]`
